Tiny changes in wording and linking
Now my pages link to home instead of profile

--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -57,8 +57,8 @@
                 <br>
 
                 <li class="sidebar-brand">
-                    <a href="profile.html">
-                        Visit Your Profile
+                     <a href="home.html">
+                        Check out Wishes You can help with
                     </a>
                 </li>
                 <li class="sidebar-brand">
