--- a/frontend/personal_details.html
+++ b/frontend/personal_details.html
@@ -35,7 +35,7 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                     <a>
-                        Edit your setting
+                        Edit your settings
                     </a>
                 </li>
                 <li>
@@ -54,8 +54,8 @@
                     <a href="preferred_maw_type.html">I am looking for...</a>
                 </li>
                 <li class="sidebar-brand">
-                    <a href="profile.html">
-                        Visit Your Profile
+                    <a href="home.html">
+                        Check out Wishes You can help with
                     </a>
                 </li>
                 <li class="sidebar-brand">
