--- a/frontend/preferred_maw_type.html
+++ b/frontend/preferred_maw_type.html
@@ -54,8 +54,8 @@
                     <a href="preferred_maw_type.html">I am looking for...</a>
                 </li>
                 <li class="sidebar-brand">
-                    <a href="profile.html">
-                        Visit Your Profile
+                     <a href="home.html">
+                        Check out Wishes You can help with
                     </a>
                 </li>
                 <li class="sidebar-brand">
