--- a/frontend/my_services.html
+++ b/frontend/my_services.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -76,6 +77,16 @@
                         <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
                         <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
                         <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
+                        <br></br>
+                        <a href="http://twitter.com/share" class="twitter-share-button" data-text="currentPage" data-count="none">Tweet</a>
+                           <script type='text/javascript'>
+                               $(document).ready(function(){
+                                   $('a[data-text]').each(function(){
+                                       $(this).attr('data-text', window.location.href );
+                                   });
+                                   $.getScript('http://platform.twitter.com/widgets.js');
+                               });
+                           </script>
                     </div>
                 </div>
             </div>
