--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -81,6 +82,16 @@
                        
                         <a href="https://twitter.com/share" class="twitter-share-button" data-url="https://github.com/bournemouth17/team-9/" data-text="Join Make-A-Wish too!" data-dnt="true">Tweet</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                         <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
+                        <br></br>
+                        <a href="http://twitter.com/share" class="twitter-share-button" data-text="currentPage" data-count="none">Tweet</a>
+                           <script type='text/javascript'>
+                               $(document).ready(function(){
+                                   $('a[data-text]').each(function(){
+                                       $(this).attr('data-text', window.location.href );
+                                   });
+                                   $.getScript('http://platform.twitter.com/widgets.js');
+                               });
+                           </script>
                     </div>
                 </div>
             </div>
