Front End Updates
Major conceptual error - sharing the personal data has been fixed.
#MyBestFixEver

--- a/frontend/personal_details.html
+++ b/frontend/personal_details.html
@@ -51,16 +51,14 @@
                 <li>
                     <a href="my_services.html">Services I can provide</a>
                 </li>
-                <li>
-                    <a href="preferred_maw_type.html">I am looking for...</a>
-                </li>
+                
                 <li class="sidebar-brand">
                     <a href="home.html">
-                        Check out Wishes You can help with
+                        Wish List
                     </a>
                 </li>
                 <li class="sidebar-brand">
-                    <a href="www.make-a-wish.org.uk/‎">
+                    <a href="https://www.make-a-wish.org.uk‎">
                         Visit MakeAWish
                     </a>
                 </li>
@@ -78,15 +76,7 @@
                         <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
                         <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
                         <br></br>
-                        <a href="http://twitter.com/share" class="twitter-share-button" data-text="currentPage" data-count="none">Tweet</a>
-                           <script type='text/javascript'>
-                               $(document).ready(function(){
-                                   $('a[data-text]').each(function(){
-                                       $(this).attr('data-text', window.location.href );
-                                   });
-                                   $.getScript('http://platform.twitter.com/widgets.js');
-                               });
-                           </script>
+
                     </div>
                 </div>
             </div>
