--- a/frontend/home.html
+++ b/frontend/home.html
@@ -56,13 +56,13 @@
                     <p style='color: white;'>Show the wishes based on:</p>
                 </li>
                 <li>
-                    <a href="myarea">Wishes of my Area</a>
+                    <a href="myarea.html">Wishes of my Area</a>
                 </li>
                 <li>
-                    <a href="icanhelp">Who can I help?</a>
+                    <a href="icanhelp.html">Who can I help?</a>
                 </li>
                 <li>
-                    <a href="needmemost">Who needs me most?</a>
+                    <a href="needmemost.html">Who needs me most?</a>
                 </li>
                 <br>
                 <br>
