--- a/frontend/icanhelp.html
+++ b/frontend/icanhelp.html
@@ -87,7 +87,7 @@
                             <h2>Wishes for You!</h2>
                             <div class="panel panel-default">
                                 <div class="panel-body">
-                                    <a href="Wish 1">Wish Headline</a><br>
+                                    <a href="#">Wish Headline</a><br>
                                     <p>Wish Description here...</p>
                                     <p>Describe who is needed!</p>
                                 </div>
