--- a/frontend/home.html
+++ b/frontend/home.html
@@ -73,9 +73,7 @@
                     </a>
                 </li>
                 <li class="sidebar-brand">
-                    <a href="https://www.make-a-wish.org.uk‎">
-                        Visit MakeAWish
-                    </a>
+                    <a href="https://www.make-a-wish.org.uk/">Visit MakeAWish</a>
                 </li>
             </ul>
         </div>
