--- a/frontend/myarea.html
+++ b/frontend/myarea.html
@@ -9,13 +9,6 @@
     <meta name="description" content="">
     <meta name="author" content="">
     
-    <!--  for facebook sharing-->
-    <meta property="og:url"           content="http://www.your-domain.com/your-page.html" />
-    <meta property="og:type"          content="website" />
-    <meta property="og:title"         content="Your Website Title" />
-    <meta property="og:description"   content="Your description" />
-    <meta property="og:image"         content="http://www.your-domain.com/path/image.jpg" />
-    <!-- End of facebook sharing code -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
     <title>Simple Sidebar - Start Bootstrap Template</title>
@@ -35,15 +28,6 @@
 </head>
 
 <body>
-    <div id="fb-root"></div>
-    <div id="fb-root"></div>
-        <script>(function(d, s, id) {
-          var js, fjs = d.getElementsByTagName(s)[0];
-          if (d.getElementById(id)) return;
-          js = d.createElement(s); js.id = id;
-          js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.9";
-          fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));</script>
         <div id="wrapper">
 
         <!-- Sidebar -->
@@ -73,9 +57,7 @@
                     </a>
                 </li>
                 <li class="sidebar-brand">
-                    <a href="https://www.make-a-wish.org.uk‎">
-                        Visit MakeAWish
-                    </a>
+                    <a href="https://www.make-a-wish.org.uk/">Visit MakeAWish</a>
                 </li>
             </ul>
         </div>
@@ -86,12 +68,21 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1>Simple Sidebar</h1>
-                        <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
-                        <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
-                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Options</a>
+                        <h1>Wishes from your Community</h1>
+                        <p>This page shows the wishes based on your local area. Connect with your commnity to provide their kids the future they dream of.</p>
+                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Menu</a>
                         <br><br>
-                        
+                        <div class="container">
+                            <h2>My Local Community!</h2>
+                            <div class="panel panel-default">
+                                <div class="panel-body">
+                                    <a href="#">Wish Headline</a><br>
+                                    <p>Wish Description here...</p>
+                                    <p>Describe who is needed!</p>
+                                </div>
+                            </div>
+                        </div>
+                        <br><br>
                         <a href="http://twitter.com/share" class="twitter-share-button" data-text="currentPage" data-count="none">Tweet</a>
                             <script type='text/javascript'>
                                 $(document).ready(function(){
