--- a/frontend/my_equipment.html
+++ b/frontend/my_equipment.html
@@ -58,9 +58,7 @@
                     </a>
                 </li>
                 <li class="sidebar-brand">
-                    <a href="https://www.make-a-wish.org.uk/">
-                        Visit MakeAWish
-                    </a>
+                    <a href="https://www.make-a-wish.org.uk/">Visit MakeAWish</a>
                 </li>
             </ul>
         </div>
@@ -74,7 +72,7 @@
                         <h1>My equipment</h1>
                         <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
                         <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
-                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
+                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Profile Menu</a>
 
                     </div>
                 </div>
