--- a/frontend/my_services.html
+++ b/frontend/my_services.html
@@ -58,9 +58,7 @@
                     </a>
                 </li>
                 <li class="sidebar-brand">
-                    <a href="https://www.make-a-wish.org.uk/‎">
-                        Visit MakeAWish
-                    </a>
+                    <a href="https://www.make-a-wish.org.uk/">Profile MakeAWish</a>
                 </li>
             </ul>
         </div>
