--- a/frontend/personal_details.html
+++ b/frontend/personal_details.html
@@ -58,9 +58,7 @@
                     </a>
                 </li>
                 <li class="sidebar-brand">
-                    <a href="https://www.make-a-wish.org.uk‎">
-                        Visit MakeAWish
-                    </a>
+                    <a href="https://www.make-a-wish.org.uk/">Visit MakeAWish</a>
                 </li>
             </ul>
         </div>
@@ -71,10 +69,42 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1>Personal details</h1>
-                        <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
-                        <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
-                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
+                        <h1>Contact Details</h1>
+                        <p>Please keep your contact and personal details up-to-date.</p>
+                        
+                        <form action="post">
+                            <div class="form-group">
+                                <label for="fname">First Name:</label>
+                                <input type="text" class="form-control" id="fname">
+                            </div>
+                            <div class="form-group">
+                                <label for="lname">Last Name:</label>
+                                <input type="text" class="form-control" id="lname">
+                            </div>
+                            <div class="form-group">
+                                <label for="email">Email address:</label>
+                                <input type="email" class="form-control" id="email">
+                            </div>
+                            <div class="form-group">
+                                <label for="pwd">Update Password:</label>
+                                <input type="password" class="form-control" id="pwd">
+                            </div>
+                            <div class="form-group">
+                                <label for="postcode">Post Code:</label>
+                                <input type="text" class="form-control" id="postcode">
+                            </div>
+                            <div class="form-group">
+                                <label for="phone">Phone Number:</label>
+                                <input type="text" class="form-control" id="phone">
+                            </div>
+                            <div class="form-group">
+                                <label for="summary">Why do you want to volunteer?</label>
+                                <textarea class="form-control" rows="5" id="briefIntro"></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-default">Submit</button>
+                        </form>
+                        <br><br>
+                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Profile Menu</a>
                         <br></br>
 
                     </div>
