--- a/frontend/home.html
+++ b/frontend/home.html
@@ -18,7 +18,7 @@
     <!-- End of facebook sharing code -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
-    <title>Simple Sidebar - Start Bootstrap Template</title>
+    <title>Home page of UK Wishes</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -84,9 +84,9 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1>Simple Sidebar</h1>
-                        <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
-                        <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
+                        <h1>Welcome, username</h1>
+                        <p>It's great to see you again. Here are some of the most relevant events we think you could help turn into reality</p>
+                        <p>Don't forget to spread the word - maybe it's you who knows that crucial person who makes another child happy!</p>
                         <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Options</a>
                         <br><br>
                         
