--- a/frontend/icanhelp.html
+++ b/frontend/icanhelp.html
@@ -11,7 +11,7 @@
     
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
-    <title>Simple Sidebar - Start Bootstrap Template</title>
+    <title>Wishes that match my abilities</title>
     
 
     <!-- Bootstrap Core CSS -->
