--- a/frontend/my_services.html
+++ b/frontend/my_services.html
@@ -36,7 +36,7 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                     <a>
-                        Edit your setting
+                        Edit your settings
                     </a>
                 </li>
                 <li>
@@ -58,7 +58,9 @@
                     </a>
                 </li>
                 <li class="sidebar-brand">
-                    <a href="https://www.make-a-wish.org.uk/">Profile MakeAWish</a>
+                    <a href="https://www.make-a-wish.org.uk/">
+                        Visit MakeAWish
+                    </a>
                 </li>
             </ul>
         </div>
