--- a/frontend/myarea.html
+++ b/frontend/myarea.html
@@ -11,7 +11,7 @@
     
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
-    <title>Simple Sidebar - Start Bootstrap Template</title>
+    <title>Wishes in my area</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
