--- a/frontend/needmemost.html
+++ b/frontend/needmemost.html
@@ -12,7 +12,7 @@
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
-    <title>Simple Sidebar - Start Bootstrap Template</title>
+    <title>Most urgent Wishes</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -70,7 +70,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1>Simple Sidebar</h1>
+                        <h1>The time is running out on these</h1>
                         <p>This space provides information about the country-wide wishes that needs immediate attention from the community.</p>
                         <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Menu</a>
                         <br><br>
