my_equipment body edited

--- a/frontend/my_equipment.html
+++ b/frontend/my_equipment.html
@@ -72,16 +72,36 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1>My equipment</h1>
-                        <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
-                        <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
-                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
+                        <p>Please list the items you don't mind lending or bringing with you to transform children's dreams into reality.</p>
+                        
+                        <form action="post">
+                            <div class="form-group">
+                                <label for="transport">If you have any means of transportation that could be used as a driving vehicle (e.g. fancy motorbike) or transportation device (e.g. minibus or lorry), please list them separated by commas.</label>
+                                <input type="text" class="form-control" id="transport">
+                            </div>
+                            <div class="form-group">
+                                <label for="machinery">Any heavy machinery to get the heavy work done? Diesel generator to tractor - anything goes for our grand projects! (please separate by commas if you have more than one suitable item)</label>
+                                <input type="text" class="form-control" id="machinery">
+                            </div>
+                            <div class="form-group">
+                                <label for="tools">Tools big and small? Hammers and spanners, chainsaws and shovels - let no volunteer be tool-less! List the items </label>
+                                <input type="text" class="form-control" id="tools">
+                            </div>
+                            <div class="form-group">
+                                <label for="artsy">Anything artistic or crafty? Costumes, skin paint, sewing set - help us create memorable characters</label>
+                                <input type="text" class="form-control" id="artsy">
+                            </div>
+                            <button type="submit" class="btn btn-default">Submit</button>
+                        </form>
+                        <br><br>
+                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Profile Menu</a>
+                        <br></br>
 
                     </div>
                 </div>
             </div>
         </div>
         <!-- /#page-content-wrapper -->
-
     </div>
     <!-- /#wrapper -->
 
