--- a/frontend/home.html
+++ b/frontend/home.html
@@ -2,6 +2,12 @@
 <html lang="en">
 
 <head>
+    <style>
+      #map {
+        height: 400px;
+        width: 50%;
+       }
+    </style>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -89,6 +95,67 @@
                         <p>Don't forget to spread the word - maybe it's you who knows that crucial person who makes another child happy!</p>
                         <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Options</a>
                         <br><br>
+                        <h3>My Google Maps Demo</h3>
+                        <div id="map"></div>
+                        <script>
+                        function initMap() {
+                            var map_center = {lat: 50.72, lng: -1.88};
+                            var event_loc1 = {lat: 50.613, lng: -2.457};
+                            var event_loc2 = {lat: 50.9, lng: -1.4};
+                            var map = new google.maps.Map(document.getElementById('map'), {
+                            zoom: 8,
+                            center: map_center
+                            });
+
+                            var contentString1 = '<div id="content">'+
+                                '<div id="siteNotice">'+
+                                '</div>'+
+                                '<h1 id="firstHeading" class="firstHeading">Event1</h1>'+
+                                '<div id="bodyContent">'+
+                                '<p><b>Event1</b>, also referred to as <b>Mock One</b>, is our first' +
+                                'event we have added for that demo' + 
+                                '<p>Link: Event1, <a href="#</a> '+
+                                '</div>'+
+                                '</div>';
+
+                            var infowindow1 = new google.maps.InfoWindow({
+                            content: contentString1
+                            });
+
+                            var marker1 = new google.maps.Marker({
+                            position: event_loc1,
+                            map: map
+                            });
+                            marker1.addListener('click', function() {
+                                infowindow1.open(map, marker1);
+                            });
+
+                            var contentString2 = '<div id="content">'+
+                                '<div id="siteNotice">'+
+                                '</div>'+
+                                '<h1 id="firstHeading" class="firstHeading">Event2</h1>'+
+                                '<div id="bodyContent">'+
+                                '<p><b>Event1</b>, also referred to as <b>Mock Two</b>, is our second' +
+                                'event we have added for that demo' + 
+                                '<p>Link: Event2, <a href="#</a> '+
+                                '</div>'+
+                                '</div>';
+
+                                var infowindow2 = new google.maps.InfoWindow({
+                            content: contentString2
+                            });
+                            var marker2 = new google.maps.Marker({
+                            position: event_loc2,
+                            map: map
+                            });
+                            marker2.addListener('click', function() {
+                                infowindow2.open(map, marker2);
+                            });
+                        }
+                        </script>
+                        <script async defer
+                        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcfcTQGlBcqNsgMo_B2nwn1cdW4gp-7j4&callback=initMap">
+                        </script>
                         
                         <a href="http://twitter.com/share" class="twitter-share-button" data-text="currentPage" data-count="none">Tweet</a>
                             <script type='text/javascript'>
