my_skills text updated
Despite the constant negative commit #covfefe

--- a/frontend/my_skills.html
+++ b/frontend/my_skills.html
@@ -69,9 +69,22 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1>My skills</h1>
-                        <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
-                        <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
-                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
+                        <p>Do you possess a vital skill or could help by providing a service? Good at organising or can share your expertise? Just being around and physically helping is crucial to see each of our Wishes through! </p>
+                        <p>The further two are closely related and interchangeable, so don't stress too much about dividing them. Just list them separated by the commas.</p>
+                        <form action="post">
+                            <div class="form-group">
+                                <label for="skills">Skills I possess:</label>
+                                <input type="text" class="form-control" id="skills">
+                            </div>
+                            <div class="form-group">
+                                <label for="services">Services I can provide:</label>
+                                <input type="text" class="form-control" id="services">
+                            </div>
+                            
+                            <button type="submit" class="btn btn-default">Submit</button>
+                        </form>
+                        <br><br>
+                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Profile Menu</a>
                         <br></br>
 
                     </div>
