--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -36,7 +36,7 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                     <a>
-                        Edit your setting
+                        Edit your settings
                     </a>
                 </li>
                 <li>
@@ -53,7 +53,7 @@
 
                 <li class="sidebar-brand">
                      <a href="home.html">
-                        Check out Wishes You can help with
+                        Wishes You can help with
                     </a>
                 </li>
                 <li class="sidebar-brand">
@@ -69,10 +69,20 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1>Your profile</h1>
-                        <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
-                        <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
+                        <p>Hello, %name</p>
+                    </div>
+                    <div class="col-lg-6">
+                        <p>Here is the recap of the work you have done in the past:</p>
+                        <p>%ListOfEvents%</p>
                        
                         <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Profile Menu</a>
+                        <br></br>
+                    </div>
+                    <div class="col-lg-6">
+                        <p>But there's more! Please check other events happening in the area and nationally, spread the word and fundraise.</p>
+                        <p><a href="myarea.html">Click here are the events happening in your area</a></p>
+                        <p><a href="https://www.make-a-wish.org.uk/support-us/fundraise">Here you can find more information to get involved in fundraising.</a></p>
+                        <p><a href="home.html">Copy this link and share it with your friends and family.</a></p>
                         <br></br>
                     </div>
                 </div>
