--- a/frontend/home.html
+++ b/frontend/home.html
@@ -90,12 +90,12 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1>Welcome, username</h1>
+                        <h1>Welcome, Daniil</h1>
                         <p>It's great to see you again. Here are some of the most relevant events we think you could help turn into reality</p>
                         <p>Don't forget to spread the word - maybe it's you who knows that crucial person who makes another child happy!</p>
                         <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Options</a>
                         <br><br>
-                        <h3>My Google Maps Demo</h3>
+                        <h3>Wishes' map</h3>
                         <div id="map"></div>
                         <script>
                         function initMap() {
@@ -133,11 +133,12 @@
                             var contentString2 = '<div id="content">'+
                                 '<div id="siteNotice">'+
                                 '</div>'+
-                                '<h1 id="firstHeading" class="firstHeading">Event2</h1>'+
+                                '<h1 id="firstHeading" class="firstHeading">Swim with dolphins</h1>'+
                                 '<div id="bodyContent">'+
-                                '<p><b>Event1</b>, also referred to as <b>Mock Two</b>, is our second' +
-                                'event we have added for that demo' + 
-                                '<p>Link: Event2, <a href="#</a> '+
+                                '<p><b>Help Caitlin</b>, the young lady who ' +
+                                'would like to swim with the dolphins</p>' + 
+                                '<p>Link: <a href="https://www.make-a-wish.org.uk/wishes/stories/i-wish-to-swim-dolphins">Wish description</a></p>'+
+                                '<p>Keywords: <a href="">swim</a>, <a href="">dolphin</a>, <a href="">travel</a>, <a href="">Portugal</a></p>'+
                                 '</div>'+
                                 '</div>';
 
