--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -69,11 +69,24 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1>Your profile</h1>
-                        <p>Hello, %name</p>
+                        <p>Hello, Daniil</p>
                     </div>
                     <div class="col-lg-6">
                         <p>Here is the recap of the work you have done in the past:</p>
-                        <p>%ListOfEvents%</p>
+                        <p>
+                            <table style="width:100%">
+                            <tr>
+                                <td><a href="https://www.make-a-wish.org.uk/wishes/stories/help-make-oliver%E2%80%99s-wish-come-true">Oliver from Didcot</a></td>
+                                <td>Labour</td>
+                                <td>26 Apr 2017</td>  
+                            </tr>
+                            <tr>
+                                <td><a href="https://www.make-a-wish.org.uk/wishes/stories/make-jasmis-wish-to-have-a-tres-chic-shopping-experience-in-paris-happen">Jasmy from Bury St Edmonds</a></td>
+                                <td>Donation</td>
+                                <td>10 Mar 2017</td> 
+                            </tr>
+                            </table>
+                        </p>
                        
                         <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Profile Menu</a>
                         <br></br>
